MediaRepresentationPart uri field should be of type URI  (#719)